network_security/network_policies/policies_manifests/02_allow_ingress_within_same_ns.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: demo-app-allow-same-ns
spec:
  podSelector:
    matchLabels:
      app: demo-app
  ingress:
  - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: default
