network_security/network_policies/policies_manifests/04_allow_ingress_from_tenant_ns.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: demo-app-allow-tenant-ns
spec:
  podSelector:
    matchLabels:
      app: demo-app
  ingress:
  - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: tenant-ns
