network_security/network_policies/policies_manifests/05_deny_egress_from_client_one.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: client-one-deny-egress
spec:
  podSelector:
    matchLabels:
      app: client-one
  egress: []
  policyTypes:
  - Egress
